Fix click message_content covering bottom half of avatar.
This causes clicks to correctly hit the avatar an open the profile
popover.

Fixes #4251.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1190,7 +1190,7 @@ div.focused_table {
 .message_content {
     line-height: 17px;
     font-size: 14px;
-    padding-left: 46px;
+    margin-left: 46px;
     display: block;
     position: relative;
 }
